--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 <body>
     
     <h1><u>Assignment 1</u></h1>
+    <form action="/api" method="post">
+        <input name="search_box" type="text" id="search_box" placeholder="Search">
+        <button name="submit" id="submit" type="submit">Submit</button>
+    </form>
 
 </body>
 </html>
