--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" >
+    <link rel="stylesheet" href="styles.css">
     <title>Assignment 1</title>
 </head>
 <body>
     
     <h1><u>Assignment 1</u></h1>
+    <h3>Edward Aloba, William Cervi, Jose Esparza</h3>
 
+    <form>
+        <form class="search-form">
+            <input type="text" class="search" placeholder="Zipcode or Restaurant">
+            <ul class="suggestions">
+              <li>Filter for a Zipcode
+              </li>
+              <li>Type of Restaurant or Restaurant</li>
+            </ul>
+          </form>
+    </form>
+
+    <script src = "script.js">  </script>
+   
 </body>
 </html>
