--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" >
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <title>Assignment 1</title>
 </head>
 <body>
@@ -11,17 +12,14 @@
 
     <h3>Edward Aloba, William Cervi, Jose Esparza</h3>
 
-
+  <div class = 'container is-max-desktop'>
     <form>
         <form class="search-form">
             <input type="text" class="search" placeholder="Zipcode or Restaurant">
-            <ul class="suggestions">
-              <li>Filter for a Zipcode
-              </li>
-              <li>Type of Restaurant or Restaurant</li>
-            </ul>
+            <ul class="suggestions"></ul>
           </form>
-    </form>
+    </form> 
+  </div>
 
     <script src = "script.js">  </script>
    
