--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" >
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <title>Assignment 1</title>
 </head>
 <body>
